# avd

ansible_collections/arista/avd/plugins/plugin_utils/: avdfacts.py  eos_designs_facts.py
ansible_collections/arista/avd/plugins/plugin_utils/eos_designs_shared_utils/: misc.py
ansible_collections/arista/avd/plugins/plugin_utils/schema/: avdschemaresolver.py
ansible_collections/arista/avd/roles/eos_cli_config_gen/templates/eos/: ethernet-interfaces.j2
ansible_collections/arista/avd/roles/eos_designs/docs/: Fabric Variables.md  Input Variables.md
ansible_collections/arista/avd/roles/eos_designs/python_modules/base/: avdstructuredconfig.py
ansible_collections/arista/avd/roles/eos_designs/python_modules/mlag/: avdstructuredconfig.py
ansible_collections/arista/avd/roles/eos_designs/python_modules/underlay/: router_isis.py
ansible_collections/arista/avd/roles/eos_designs/schemas/: eos_designs.jsonschema.json  eos_designs.schema.yml
ansible_collections/arista/avd/roles/eos_designs/tasks/: studios-structured-config.yml  studios-topology.yml
python-avd/: .gitignore  LICENSE  MANIFEST.in  Makefile  README.md  compile_templates.py  pyproject.toml  requirements.txt  runner.py  setup.py
python-avd/pyavd/: VERSION  __init__.py  eos_cli_config_gen.py  eos_designs_facts.py  eos_designs_structured_configs.py  pyavd_version_suffix.txt  requirements.txt  setup.py  templater.py  tox.ini
python-avd/pyavd/tests/: test_eos_cli_config_gen.py
python-avd/pyavd/tools/: multiprocess_runners.py  read_vars.py  template_var_files.py
python-avd/vendor_overrides/schema/: default_schemas.py
python-avd/vendor_overrides/utils/: get_templar.py
