[build-system]
requires = ["setuptools>=61.2", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name="pyavd"
dynamic = ["version", "dependencies"]
authors=[{ name = "Arista Networks", email = "ansible@arista.com"}]
description="Arista validated designs"
readme = "README.md"
license = { file = "pyavd/LICENSE" }
classifiers = [
    "License :: OSI Approved :: Apache License",
    "Operating System :: OS Independent",
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.10",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Software Development :: Testing",
]
keywords = ["pyavd"]

requires-python = ">=3.10"

# [project.urls]
# Homepage = ""

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["pyavd*"]
exclude = ["vendor_overrides*"]

[tool.setuptools.dynamic]
version = {file = ["pyavd/VERSION"]}
dependencies = {file = ["requirements.txt"]}
